# chat

./: .clang-format  meson.build
client/: main.c
common/: helpers.c  message.c
common/common/: helpers.h  message.h
server/: io.c  io.h  main.c  messages.c  messages.h  users.c  users.h
src/: main.c
